# nstarwrap

./: .gitignore  README.md  pyproject.toml  setup.py
Fortran_scripts/: Makefile  Makefile.pywrapper  nstar-mcmc_pywrapper.f  pywrapper.f
Tutorials/Tutorial_1/: Notebook.ipynb  image.grp
Tutorials/Tutorial_2/: Notebook.ipynb  image.psf
Tutorials/Tutorial_3/: Instructions.md  Notebook.ipynb  Scatter_plot.py  Step1.py  Step2.py
Tutorials/Tutorial_4/: Instructions.md  Scatter_plot.py  Step1.py  Step2.py  image.nst  image_4stars.grp
nstarwrap/: __init__.py  daotools.py
